		disabled with -A.
20210309	Beginning to separate debug messages into subsystems, that have
		individual verbosity levels.
		Making -K work more consistently (enter the debugger at the
		end of a run). -V implies -K.
		Making -T work better for M88K (breaking into the debugger
		directly on bad memory accesses, if -K is used).
20210310	All MIPS machines now register their devices as symbols (based
		in kseg1, i.e. 0xffffffffa0000000).
20210311	Making -T work better for MIPS, PPC, ARM, and SuperH.
20210314	Adding a -L command line option for enabling tap networking
		without using configuration files.
		-x is now needed if one wants separate xterm windows for serial
		I/O when using configuration files with a single machine.
20210316	debugmsg subsystems can now be registered at runtime; this is
		so far done from the Lance Ethernet device.
		Adding a 'verbosity' debugger command for inspecting and
		setting the verbosity level for individual subsystems.
20210318	Fixing an annoying 'backspace' bug in the debugger command
		line handling, where the response sometimes could become
		"unknown command ''".
		Implementing CTRL-W (erase word) in the debugger.
		Implementing CTRL-T (SIGINFO-like status line) in the debugger.
20210320	Removing the UNSTABLE_DEVEL configure define; it was not used
		much, and the debugmsg verbosity levels can be used in its
		place.
		Fixing a bug for MIPS R2000/R3000 when writing to coprocessor 0
		"entrylo" register (if the lowest 8 bits were 0, the code took
		the non-R2000/R3000 code path).
20210321	Adding an empty i960 CPU skeleton [again].
		Moving 'arch' from struct machine to struct cpu; in the future,
		perhaps this would allow a machine to have heterogenous CPU
		sets (such as the Dreamcast with both SuperH and ARM).
		Removing "slow_serial_interrupts_hack_for_linux" (-U) command
		line option, since it is not used for most guest OSes, and
		occupied a command line option char.