@@ -27,7 +27,11 @@
  *
  *  COMMENT: Fujitsu MB89352 SCSI Protocol Controller (SPC)
  *
- *  TODO: Everything. :-)
+ *  Based on looking at openbsd/sys/arch/luna88k/stand/boot (the OpenBSD boot
+ *  loader), and matching its expectations.
+ *
+ *  TODO: Almost everything.
+ *  TODO IN PARTICULAR: Make it work also with the OpenBSD kernel!
  */
 
 #include <stdio.h>
@@ -35,6 +39,7 @@
 
 #include "cpu.h"
 #include "device.h"
+#include "diskimage.h"
 #include "machine.h"
 #include "memory.h"
 #include "misc.h"
@@ -51,17 +56,47 @@ const bool mb89352_abort_on_unimplemented_stuff = false;
 
 struct mb89352_data {
 	struct interrupt	irq;
+	bool			irq_asserted;
+
 	uint8_t			reg[MB89352_NREGS];
+	
+	int			target;		// target SCSI ID, e.g. 6
+	int			phase;
+	size_t			xlen;
+
+	struct scsi_transfer	*xferp;
+
+	size_t			bufpos;
+	uint8_t			*buf;
 };
 
 
 static void reassert_interrupts(struct mb89352_data *d)
 {
-	// TODO. Check INTS register etc?
-	if (false)
+	bool assert = d->reg[INTS] != 0;
+
+	if (!(d->reg[SCTL] & SCTL_INTR_ENAB))
+		assert = false;
+	if (d->reg[SCTL] & SCTL_DISABLE)
+		assert = false;
+
+	if (assert && !d->irq_asserted)
 		INTERRUPT_ASSERT(d->irq);
-	else
+	else if (!assert && d->irq_asserted)
 		INTERRUPT_DEASSERT(d->irq);
+
+	d->irq_asserted = assert;
+}
+
+
+static void reset_controller(struct mb89352_data *d)
+{
+	debugmsg(SUBSYS_DEVICE, "mb89352", VERBOSITY_INFO, "resetting controller");
+
+	memset(d->reg, 0, sizeof(d->reg));
+
+	d->reg[BDID] = 7;
+	d->reg[SCTL] = SCTL_DISABLE;
 }
 
 
@@ -97,13 +132,214 @@ DEVICE_ACCESS(mb89352)
 
 	switch (relative_addr / 4) {
 
+	case BDID:
+		if (writeflag == MEM_WRITE) {
+			d->reg[BDID] = idata;
+			if (idata != 7)
+				debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+				    VERBOSITY_INFO, "unimplemented BDID value: 0x%x",
+			    	    (int) idata);
+		}
+		break;
+
+	case SCTL:
+		if (writeflag == MEM_WRITE) {
+			d->reg[SCTL] = idata;
+
+			if (idata & SCTL_CTRLRST)
+				reset_controller(d);
+		}
+		break;
+
+	case SCMD:
+		if (writeflag == MEM_WRITE) {
+			d->reg[SCMD] = idata;
+			
+			switch (idata) {
+
+			case SCMD_BUS_REL:	// 0x00
+				break;
+
+			case SCMD_SELECT:
+				// Select target in the temp register.
+				{
+					int target = 0;
+					while (target < 8) {
+						int m = 1 << target;
+						if (d->reg[TEMP] & ~(1 << 7) & m)
+							break;
+						target ++;
+					}
+
+					if (target < 8)
+						debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+						    VERBOSITY_DEBUG,
+					    	    "SCMD_SELECT target %i", target);
+					else
+						debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+						    VERBOSITY_WARNING,
+					    	    "SCMD_SELECT with no target?");
+
+					d->target = target;
+					d->reg[INTS] |= INTS_CMD_DONE;
+					d->reg[PSNS] &= ~7;
+					d->reg[PSNS] |= 2; //CMD_PHASE;
+					d->reg[PSNS] |= PSNS_REQ;
+
+					if (d->xferp != NULL)
+						scsi_transfer_free(d->xferp);
+
+					d->xferp = scsi_transfer_alloc();
+				}
+				break;
+
+			case SCMD_XFR | SCMD_PROG_XFR:
+				{
+					d->phase = d->reg[PCTL] & 7;
+					d->xlen = (d->reg[TCH] << 16) + (d->reg[TCM] << 8)
+						+ d->reg[TCL];
+
+					if (d->buf == NULL)
+						d->buf = malloc(d->xlen);
+
+					d->bufpos = 0;
+
+					debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+					    VERBOSITY_WARNING,
+				    	    "SCMD_XFR | SCMD_PROG_XFR, phase %i, len %i", d->phase, d->xlen);
+
+					d->reg[INTS] |= INTS_CMD_DONE;
+				}
+				break;
+
+			default:
+				debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+				    mb89352_abort_on_unimplemented_stuff ? VERBOSITY_ERROR : VERBOSITY_WARNING,
+			    	    "unimplemented SCMD: 0x%x", (int) idata);
+
+				if (mb89352_abort_on_unimplemented_stuff) {
+					cpu->running = 0;
+					return 0;
+				}
+			}
+		}
+		break;
+
 	case INTS:
-		if (writeflag == MEM_WRITE)
+		if (writeflag == MEM_WRITE) {
+			d->reg[INTS] &= ~idata;
 			debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
-			    mb89352_abort_on_unimplemented_stuff ? VERBOSITY_ERROR : VERBOSITY_WARNING,
-		    	    "TODO: write to INTS: 0x%x",
+			    VERBOSITY_INFO, "write to INTS: 0x%x",
 		    	    (int) idata);
+		}
 		break;	
+
+	case PSNS:
+		if (writeflag == MEM_WRITE) {
+			d->reg[relative_addr / 4] = idata;
+			debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+			    VERBOSITY_WARNING,
+		    	    "unimplemented write to PSNS: 0x%x",
+			    (int) idata);
+		}
+		break;
+
+	case SSTS:
+		if (writeflag == MEM_WRITE) {
+			d->reg[relative_addr / 4] = idata;
+			debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+			    VERBOSITY_WARNING,
+		    	    "unimplemented write to SSTS: 0x%x",
+			    (int) idata);
+		}
+		break;
+
+	case PCTL:
+		if (writeflag == MEM_WRITE) {
+			d->reg[relative_addr / 4] = idata;
+		}
+		break;
+
+	case DREG:
+		if (writeflag == MEM_WRITE) {
+			d->buf[d->bufpos++] = idata;
+			
+			if (d->bufpos == d->xlen) {
+				debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+				    VERBOSITY_WARNING,
+			    	    "%i bytes written to buffer", d->xlen);
+
+				switch (d->phase) {
+				case 2:	// CMD
+					d->xferp->cmd = d->buf;
+					d->buf = NULL;
+					d->xferp->cmd_len = d->bufpos;
+					d->bufpos = 0;
+					break;
+				default:
+					debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+					    VERBOSITY_ERROR,
+				    	    "DREG write: UNIMPLEMENTED PHASE %i", d->phase);
+				    	cpu->running = 0;
+				}
+				
+				/* int res = */ diskimage_scsicommand(cpu,
+				    d->target, DISKIMAGE_SCSI, d->xferp);
+
+				if (d->xferp->data_in != NULL) {
+					d->buf = d->xferp->data_in;
+					d->xferp->data_in = NULL;
+					d->xlen = d->xferp->data_in_len;
+					d->bufpos = 0;
+					d->phase = 1;	// DATA_IN
+				} else if (d->xferp->status != NULL) {
+					d->buf = d->xferp->status;
+					d->xferp->status = NULL;
+					d->xlen = d->xferp->status_len;
+					d->bufpos = 0;
+					d->phase = 3;	// STATUS
+				}
+				
+				d->reg[PSNS] &= ~7;
+				d->reg[PSNS] |= d->phase;
+				d->reg[PSNS] |= PSNS_REQ;
+				
+				d->reg[INTS] |= INTS_CMD_DONE;	// ?
+			}
+		} else {
+			if (d->buf == NULL) {
+				debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+				    mb89352_abort_on_unimplemented_stuff ? VERBOSITY_ERROR : VERBOSITY_WARNING,
+			    	    "DREG: no buffer to read from?");
+			} else if (d->bufpos >= d->xlen) {
+				debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+				    mb89352_abort_on_unimplemented_stuff ? VERBOSITY_ERROR : VERBOSITY_WARNING,
+			    	    "DREG: read longer than buffer?");
+			} else {
+				odata = d->buf[d->bufpos ++];
+				debugmsg_cpu(cpu, SUBSYS_DEVICE, "mb89352",
+				    VERBOSITY_DEBUG,
+			    	    "DREG: read from buffer: 0x%02x", (int)odata);
+
+				if (d->bufpos >= d->xlen) {
+					d->phase = 4;  // BUS_FREE
+					d->reg[INTS] |= INTS_DISCON;
+					d->reg[PSNS] &= ~7;
+					d->reg[PSNS] |= d->phase;
+					d->reg[PSNS] |= PSNS_REQ;
+				}
+			}
+			
+		}
+		break;
+
+	case TEMP:
+	case TCH:
+	case TCM:
+	case TCL:
+		if (writeflag == MEM_WRITE)
+			d->reg[relative_addr / 4] = idata;
+		break;
 
 	default:
 		if (writeflag == MEM_WRITE)
@@ -125,6 +361,8 @@ DEVICE_ACCESS(mb89352)
 			return 0;
 		}
 	}
+
+	reassert_interrupts(d);
 
 	if (writeflag == MEM_READ)
 		memory_writemax64(cpu, data, len, odata);
@@ -148,7 +386,7 @@ DEVINIT(mb89352)
 
 	machine_add_tickfunction(devinit->machine, dev_mb89352_tick, d, TICK_STEPS_SHIFT);
 
-	d->reg[INTS] = 0xff;
+	reset_controller(d);
 
 	return 1;
 }
